--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         let serialNum = document.getElementById("snum").value;
         let pwd = document.getElementById("password").value;
         if (serialNum == "SE000000" && pwd == "ADA123456") {
-          window.location.assign("https://turmunkh07.github.io/ada");
+          window.location.assign("https://Alpha-Tech524.github.io/ada");
           alert("Logged in succesfully");
         } else {
           alert("Login failed");
