--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Alpha Tech</title>
+    <title>Alpha Tech</title>
     <link rel="stylesheet" href="style.css" />
 
     <link
@@ -21,9 +21,7 @@
     <div class="bgimage">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand text-warning font-weight-bold"
-            >Alpha Tech</a
-          >
+          <a class="navbar-brand text-warning font-weight-bold">Alpha Tech</a>
 
           <button
             class="navbar-toggler"
@@ -48,16 +46,15 @@
       </nav>
       <div class="container text-center text-white headerset">
         <h2>Innovation starts here</h2>
-        <h1>WANT TO USE OUR PRODUCT?</h1>
-        <a
-          href="/login"
-        >
-        <button class="btn btn-warning btn-lg">Get started</button>
+        <h1>Click to see the demo of ADA</h1>
+        <a href="/login">
+          <button class="btn btn-warning btn-lg">Get started</button>
         </a>
       </div>
     </div>
   </body>
-  
+
   <footer class="footer">
-    <h6 class="text-center">Made with ❤️ by Alpha Tech</h6>>
+    <h6 class="text-center">Made with ❤️ by Alpha Tech</h6>
+  </footer>
 </html>
